Resources/Adding StdDev and BoxPlots/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_wrapLines_simpl_rte_altergo.txt
[kernel] Parsing wrapLines_simpl_rte.c (with preprocessing)
[kernel] wrapLines_simpl_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing wrapLines_simpl.c (with preprocessing)
  3     [kernel] Warning: end of file reached before line 3
[kernel] Frama-C aborted: invalid user input.
